# jax-ffi

./: CMakeLists.txt  README.md  pyproject.toml
lib/: cuda_examples.cu  gpu_ops.cc  kernel_helpers.h  kernels.h  pybind11_kernel_helpers.h
src/cuda_examples/: __init__.py  cuda_examples.py  register_ops.py
tests/: cuda_examples_test.py
