[project]
name = "cuda_examples"
requires-python = ">=3.9"
dependencies = ["jax>=0.4.16", "jaxlib>=0.4.16"]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["pybind11>=2.6", "scikit-build-core>=0.5"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.install-dir = "cuda_examples"
